src/styles/base.css
:root {
  background-color: var(--page-background-color);
  font-family: "Outfit Variable", sans-serif;
  font-optical-sizing: auto;
  font-style: normal;
  color: var(--text-color);
}

a {
  color: var(--link-color);
}

li {
  margin-bottom: 5px;
}

button {
  border: none;
  cursor: pointer;
}
.button-row {
  display: flex;
  flex-direction: row;
  gap: 5px;
}

body {
  max-width: 1000px;
  margin: 0 auto 100px auto;
}
.body {
  background-color: var(--content-background-color);
  padding-bottom: 10px;
}

.head {
  background-image: url("/static/bg.png");
  background-size: cover;
  image-rendering: pixelated;
  padding-top: 20px;
}

.profile-info {
  background-color: var(--content-background-color);
  max-width: 300px;
  margin-left: auto;
  padding: 10px 0;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  border: var(--navbar-border);
  border-bottom: none;
}
.profile-info__clanname {
  text-decoration: none;
  font-weight: bold;
}
.profile-info__clan {
  display: flex;
  padding: 0 10px;
}
.profile-info ul {
  margin: 0;
  list-style-type: none;
  padding-inline-start: 7px;
}
.profile-info_next-moon {
  display: block;
  width: fit-content;
  margin-left: auto;
  margin-right: 10px;
}

.navbar {
  /* background-color: rgb(237 229 208); */
  font-family: "Bubblegum Sans", sans-serif;
  background-color: var(--navbar-background-color);
  background: var(--navbar-background-gradient);
  border-bottom: var(--navbar-border);
  border-top: var(--navbar-border);
  margin-bottom: 5px;
}
.navbar .nav-item {
  font-family: "Bubblegum Sans", sans-serif;
  display: inline-block;
  text-decoration-line: none;
  padding: 10px;
  font-size: large;
  color: var(--navbar-text-color);
  background-color: transparent;
  border-radius: 0;
  border: none;
}
.navbar .nav-item:hover {
  background-color: var(--navbar-hovered-text-color);
}
.navbar .nav-item[data-active] {
  background-color: var(--navbar-hovered-text-color);
}


.nav-sublist {
  display: flex;
  flex-direction: column;
  background-color: var(--navbar-hovered-text-color);
    box-shadow: 1px 5px 15px -12px rgba(0,0,0,0.75);
}
.nav-sublist a, .nav-sublist div {
  font-family: "Bubblegum Sans", sans-serif;
  font-size: large;
  text-decoration-line: none;
  padding: 10px 10px 10px 5px;
  color: var(--navbar-text-color);
  text-align: left;
}
.nav-sublist a::before {
  content: "> ";
  visibility: hidden;
}
.nav-sublist a[data-active]::before {
  content: "> ";
  visibility: visible;
}


.breadcrumbs {
  background-color: var(--breadcrumbs-background-color);
  width: 98%;
  margin: 0px auto 10px auto;
  padding: 5px;
  border-radius: 5px;
  box-sizing: border-box;
}

main {
  margin: 0 10px;
}

img {
  max-width: 100%;
}

.progress-bar {
  height: 15px;
  border: none;
  margin-top: 0.2em;
  border-radius: 2px;
  background-color: var(--progress-bar-bg);
}
.progress-bar-value {
  border-radius: 2px;
  background-color: var(--progress-bar-fill);
  height: inherit;
}

details {
  display: inline-block;
}

.flex {
  display: flex;
  flex-wrap: wrap;
}

.row-list {
  list-style-type: none;
  padding-inline-start: 20px;
  margin-bottom: 0;
}

.icon-button {
  background-color: transparent;
  color: var(--icon-button-text-color);
  padding: 0;
}
.icon-button:hover {
  color: var(--icon-button-hovered-text-color);
  background-color: transparent;
}

button,
.btn {
  text-align: center;
  background-color: var(--button-background-color);
  padding: 10px;
  color: var(--button-text-color);
  font-family: "Outfit Variable", sans-serif;
  font-weight: 600;
  font-size: medium;
  border-radius: 10px;
  text-decoration-line: none;
}
button:disabled,
.btn:disabled {
  background-color: var(--button-disabled-background-color);
}
button:disabled:hover,
.btn:disabled:hover {
  background-color: var(--button-disabled-background-color);
  cursor: default;
}
button:hover,
.btn:hover {
  background-color: var(--button-hovered-background-color);
}

.link-button {
  background-color: transparent;
  padding: 0;
  display: inline-block;
  font-weight: 400;
  border-radius: 0;
  color: var(--link-color);
  text-decoration: underline;
}
.link-button:hover {
  background-color: transparent;
}

.btn-secondary {
  background-color: var(--button-secondary-background-color);
  color: var(--button-secondary-text-color);
  border: 2px solid var(--button-secondary-text-color);
}
.btn-secondary:hover {
  background-color: var(--button-secondary-hovered-background-color);
}

details {
  width: 95%;
  border-radius: 5px;
}
details > div.details-content {
  padding: 0 1em 0.1em 1em;
}
summary {
  width: 100%;
  border-radius: 5px;
  padding: 0.5em 0.25em;
}
summary:hover {
  background-color: var(--summary-background-color);
  cursor: pointer;
}
summary:open {
  background-color: var(--summary-background-color);
}

input[type="text"] {
  font-size: 16px;
}

h1, h2 {
  margin: 0.25em 0;
}
.below-header {
  margin-top: 0.25em;
}

svg.season_spring {
  fill: var(--spring-color);
  stroke: var(--spring-color);
}
svg.season_winter {
  stroke: var(--winter-color);
}
svg.season_summer {
  stroke: var(--summer-color);
  fill: var(--summer-color);
}
svg.season_fall {
  stroke: var(--fall-color);
  fill: var(--fall-color);
}

